Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </section>
 
     <section class="main-content">
-      <p><img src="http://i.imgur.com/a5ne4dn.png" alt="react-sublime screenshot"></p>
+      <p><img src="http://i.imgur.com/a5ne4dn.png"></p>
 
 <h2>
 <a id="styled-components" class="anchor" href="#styled-components" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Styled Components!</h2>
