--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </section>
 
     <section class="main-content">
-      <p><img src="http://i.imgur.com/a5ne4dn.png" style="float: left"></p>
+      <center><img src="http://i.imgur.com/a5ne4dn.png"></center>
 
 <p></p>
 
