--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
       <a href="https://github.com/garetmckinley/react-sublime" class="btn">View on GitHub</a>
       <a href="https://github.com/garetmckinley/react-sublime/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/garetmckinley/react-sublime/tarball/master" class="btn">Download .tar.gz</a>
+      <!-- Place this tag where you want the button to render. -->
+<a class="github-button" href="https://github.com/garetmckinley/styled-babel-sublime" data-icon="octicon-star" data-style="mega" data-count-href="/garetmckinley/styled-babel-sublime/stargazers" data-count-api="/repos/garetmckinley/styled-babel-sublime#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star garetmckinley/styled-babel-sublime on GitHub">Star</a>
     </section>
 
     <section class="main-content">
@@ -37,6 +39,7 @@
 
     </section>
 
-  
+  <!-- Place this tag in your head or just before your close body tag. -->
+  <script async defer src="https://buttons.github.io/buttons.js"></script>
   </body>
 </html>
