--- a/index.html
+++ b/index.html
@@ -13,11 +13,10 @@
     <section class="page-header">
       <h1 class="project-name">styled-babel-sublime</h1>
       <h2 class="project-tagline">Babel syntax highlighter for Sublime Text 3 with native support for embedded CSS rules.</h2>
-      <a href="https://github.com/garetmckinley/react-sublime" class="btn">View on GitHub</a>
-      <a href="https://github.com/garetmckinley/react-sublime/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/garetmckinley/react-sublime/tarball/master" class="btn">Download .tar.gz</a>
-      <!-- Place this tag where you want the button to render. -->
-<a class="github-button" href="https://github.com/garetmckinley/styled-babel-sublime" data-icon="octicon-star" data-style="mega" data-count-href="/garetmckinley/styled-babel-sublime/stargazers" data-count-api="/repos/garetmckinley/styled-babel-sublime#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star garetmckinley/styled-babel-sublime on GitHub">Star</a>
+      <a class="github-button" href="https://github.com/garetmckinley/styled-babel-sublime/archive/master.zip" data-icon="octicon-cloud-download" data-style="mega" aria-label="Download garetmckinley/styled-babel-sublime on GitHub">Download</a>
+      <a class="github-button" href="https://github.com/garetmckinley/styled-babel-sublime" data-icon="octicon-star" data-style="mega" data-count-href="/garetmckinley/styled-babel-sublime/stargazers" data-count-api="/repos/garetmckinley/styled-babel-sublime#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star garetmckinley/styled-babel-sublime on GitHub">Star</a>
+      <a class="github-button" href="https://github.com/garetmckinley/styled-babel-sublime/fork" data-icon="octicon-repo-forked" data-style="mega" data-count-href="/garetmckinley/styled-babel-sublime/network" data-count-api="/repos/garetmckinley/styled-babel-sublime#forks_count" data-count-aria-label="# forks on GitHub" aria-label="Fork garetmckinley/styled-babel-sublime on GitHub">Fork</a>
+      <a class="github-button" href="https://github.com/garetmckinley/styled-babel-sublime/issues" data-icon="octicon-issue-opened" data-style="mega" data-count-api="/repos/garetmckinley/styled-babel-sublime#open_issues_count" data-count-aria-label="# issues on GitHub" aria-label="Issue garetmckinley/styled-babel-sublime on GitHub">Issue</a>
     </section>
 
     <section class="main-content">
